--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "request": "^2.88.0",
-    "turndown": "^5.0.3"
+    "turndown": "^5.0.3",
+    "utils-lan": "^1.2.0"
   }
 }
